# adk-workshop-google

./: 01_rag_engine_vertex_ai_search.ipynb  02_adk_tutorial.ipynb  03_deploy.ipynb  README.md  pyproject.toml  requirements.txt
RAG/: README.md
RAG/deployment/: deploy.py  run.py
RAG/rag/shared_libraries/: prepare_corpus_and_data.py
hackathon-template/: pyproject.toml  requirements.txt
hackathon-template/agents/: deploy.sh
hackathon-template/agents/hotel_agent/: agent.py
mcp-coffee-local-server/: README.md
mcp-wiki-remote-server/: README.md
mcp-wiki-remote-server/http-sse-mcp-starter/: requirements.txt  server.py
